# modulo

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile.development  Dockerfile.production  Dockerfile.remote-dev  README.md  build-server.sh  build.sh  index.html  remote-dev.sh  run.sh  setup.sh  update_version.sh
lib/state_representation/: .gitignore  CMakeLists.txt  README.md
lib/state_representation/include/state_representation/: State.hpp
lib/state_representation/include/state_representation/Cartesian/: CartesianPose.hpp  CartesianState.hpp  CartesianTwist.hpp  CartesianVelocity.hpp  CartesianWrench.hpp
lib/state_representation/include/state_representation/DualQuaternion/: DualQuaternionPose.hpp  DualQuaternionState.hpp  DualQuaternionTwist.hpp
lib/state_representation/include/state_representation/Exceptions/: EmptyStateException.hpp  IncompatibleReferenceFramesException.hpp  IncompatibleSizeException.hpp  IncompatibleStatesException.hpp
lib/state_representation/include/state_representation/Joint/: JointPositions.hpp  JointState.hpp  JointTorques.hpp  JointVelocities.hpp
lib/state_representation/include/state_representation/Robot/: JacobianMatrix.hpp
lib/state_representation/src/Cartesian/: CartesianPose.cpp  CartesianState.cpp  CartesianTwist.cpp  CartesianVelocity.cpp  CartesianWrench.cpp
lib/state_representation/src/DualQuaternion/: DualQuaternionPose.cpp  DualQuaternionState.cpp  DualQuaternionTwist.cpp
lib/state_representation/src/Joint/: JointPositions.cpp  JointState.cpp  JointTorques.cpp  JointVelocities.cpp
lib/state_representation/src/Robot/: JacobianMatrix.cpp
lib/state_representation/tests/: testCartesianState.cpp  testDualQuaternionState.cpp  testJacobianMatrix.cpp  testJointState.cpp
source/lib/protocol_buffers/: CMakeLists.txt
source/lib/protocol_buffers/cmake/: modifiedprotobuf.cmake
source/lib/protocol_buffers/include/protocol_buffers/: Communication.hpp
source/lib/protocol_buffers/proto/: CartesianStateMsg.proto
source/lib/protocol_buffers/src/: Communication.cpp
source/modulo_component_interfaces/: CMakeLists.txt  README.md  package.xml
source/modulo_component_interfaces/srv/: StringTrigger.srv
source/modulo_components/: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
source/modulo_components/include/exceptions/: PredicateNotFoundException.hpp
source/modulo_components/include/modulo_components/: Component.h  Component.hpp  ComponentInterface.h  ComponentInterface.hpp  LifecycleComponent.h  LifecycleComponent.hpp
source/modulo_components/include/modulo_components/exceptions/: AddServiceException.hpp  AddSignalException.hpp  ComponentException.hpp  ComponentParameterException.hpp  ImmutablePredicateException.hpp  LookupTransformException.hpp  PredicateNotFoundException.hpp  SignalAlreadyExistsException.hpp
source/modulo_components/include/modulo_components/utilities/: predicate_type.h  predicate_variant.h  predicate_variant.hpp  utilities.h  (+1 more)
source/modulo_components/modulo_components/: component.py  component_interface.py  lifecycle_component.py  py_component.py
source/modulo_components/modulo_components/exceptions/: __init__.py  component_exceptions.py
source/modulo_components/modulo_components/utilities/: __init__.py  utilities.py
source/modulo_components/src/: Component.cpp  ComponentInterface.cpp  LifecycleComponent.cpp
source/modulo_components/test/cpp/: test_component.cpp  test_component_communication.cpp  test_component_interface.cpp  test_component_interface_empty_parameters.cpp  test_component_interface_parameters.cpp  test_lifecycle_component.cpp  test_lifecycle_component_communication.cpp
source/modulo_components/test/cpp_tests/: test_cpp_component.cpp
source/modulo_components/test/python/: conftest.py  test_component.py  test_component_communication.py  test_component_interface.py  test_component_interface_empty_parameters.py  test_component_interface_parameters.py  test_lifecycle_component_communication.py
source/modulo_components/test/python_tests/: conftest.py  test_py_component.py
source/modulo_core/: CMakeLists.txt  README.md  package.xml
source/modulo_core/examples/: cartesianCircular.cpp  cartesianLinear.cpp  helicoidal.cpp  joints.cpp  movingReferenceFrame.cpp  testCartesianCircular.cpp  testHelicoidalTrajectory.cpp  testMovingReferenceFrame.cpp
source/modulo_core/include/modulo_core/: Cell.hpp  Component.hpp  Controller.hpp  EncodedState.hpp  Monitor.hpp  MotionGenerator.hpp  StateConversion.hpp
source/modulo_core/launch/: example_control_loop.sh  test.launch.py
source/modulo_core/modulo_core/: __init__.py  encoded_state.py
source/modulo_core/modulo_core/exceptions/: __init__.py  core_exceptions.py
source/modulo_core/modulo_core/translators/: message_readers.py  message_writers.py  parameter_translators.py
source/modulo_core/src/: Cell.cpp  Component.cpp  Controller.cpp  Monitor.cpp  MotionGenerator.cpp  Recorder.cpp  StateConversion.cpp
source/modulo_core/src/communication/: CommunicationHandler.cpp  MessagePair.cpp  MessagePairInterface.cpp  PublisherInterface.cpp  SubscriptionHandler.cpp  SubscriptionInterface.cpp
source/modulo_core/src/translators/: message_readers.cpp  message_writers.cpp  parameter_translators.cpp
source/modulo_core/test/: test_modulo_new_core.cpp
source/modulo_core/test/python/: conftest.py
src/modulo_core/: CMakeLists.txt  README.md
src/modulo_core/include/modulo_core/: Cell.hpp  Controller.hpp  Modulator.hpp  MotionGenerator.hpp  Recorder.hpp  Recorders.hpp  RobotInterface.hpp  SensorInterface.hpp  StateConversion.hpp  Visualizer.hpp
src/modulo_core/src/: Cell.cpp  Controller.cpp  Modulator.cpp  MotionGenerator.cpp  Recorder.cpp  Recorders.cpp  RobotInterface.cpp  SensorInterface.cpp  StateConversion.cpp  Visualizer.cpp
src/modulo_core/tests/: testArchitectureCartesianSpace.cpp  testArchitectureDualQuaternionSpace.cpp  testArchitectureJointSpace.cpp  testCartesian.cpp  testMixed.cpp
src/modulo_msgs/: CMakeLists.txt  README.md  package.xml
src/modulo_msgs/msg/: JacobianMatrix.msg
(+925 files in other folders)
