<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modulo_components</name>
  <version>2.1.5</version>
  <description>TODO</description>
  <maintainer email="baptiste@aica.tech">Baptiste Busch</maintainer>
  <maintainer email="enrico@aica.tech">Enrico Eberhard</maintainer>
  <maintainer email="dominic@aica.tech">Dominic Reber</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rclcpp_components</build_depend>
  <build_export_depend>rclcpp_components</build_export_depend>

  <depend>console_bridge</depend>
  <depend>modulo_core</depend>
  <depend>modulo_component_interfaces</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
