<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modulo_core</name>
  <version>2.0.1</version>
  <description>Modulo Core communication and translation utilities for interoperability with EPFL Control Libraries</description>
  <maintainer email="baptiste@aica.tech">Baptiste Busch</maintainer>
  <maintainer email="enrico@aica.tech">Enrico Eberhard</maintainer>
  <maintainer email="dominic@aica.tech">Dominic Reber</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
